# text-to-speech-cpu

./: .gitignore  pyproject.toml  readme.md
src/text_to_speech_cpu/: __init__.py
